--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,10 @@
         <java.version>1.8</java.version>
     </properties>
 
+    <modules>
+        <module>appbuilder-security</module>
+    </modules>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -32,7 +36,7 @@
         <dependency>
             <groupId>com.talkingdata.appbuilder</groupId>
             <artifactId>appbuilder-security</artifactId>
-            <version>0.0.22</version>
+            <version>0.0.23-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.talkingdata.appbuilder</groupId>
