--- a/appbuilder-security/pom.xml
+++ b/appbuilder-security/pom.xml
@@ -49,6 +49,11 @@
             <artifactId>configclient</artifactId>
             <version>4.1.9</version>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.25</version>
+        </dependency>
     </dependencies>
 
     <build>
